update: /auth/logout
