# app/controllers/application_controller.rb
@@ -12,6 +12,9 @@ class ApplicationController < ActionController::API
     authenticate_or_request_with_http_token do |token, _options|
       auth = AuthenticateToken.find_by(token: token)
 
+      @token = token
+      @user = auth&.user
+      
       !auth.nil? && auth.active && auth.created_at > Time.zone.now - 1.hour
     end
   end
